fixed tooltip styling

--- a/software/src/omaha/templates/components/speaker-tooltip.html
+++ b/software/src/omaha/templates/components/speaker-tooltip.html
@@ -16,10 +16,12 @@
       }
     </style>
     <div>
-      Volume: <span>{{speaker.volumeLevel}}</span>
+      <b>Volume: <span>{{speaker.volumeLevel}}</span></b>
     </div>
     <div>
       <paper-button on-click="_selectSpeaker">speaker</paper-button>
+    </div>
+    <div>
       <paper-button on-click="_selectZone">zone</paper-button>
     </div>
   </template>
