--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -12,10 +12,12 @@
 <link rel="import" href="/components/map-controller.html">
 <link rel="import" href="/components/open-map-controller.html">
 <link rel="import" href="/components/zones/zone-map-controller.html">
+<link rel="import" href="/components/zones/zone-controller.html">
 <link rel="import" href="/components/account-creation-form.html">
 <link rel="import" href="/components/zone-creation-form.html">
 <link rel="import" href="/components/simple-fit.html">
 <link rel="import" href="/components/omaha-drawer.html">
+
 <dom-module id="omaha-app">
   <template>
     <style>
@@ -24,13 +26,13 @@
         height: 100%;
       }
       @media (min-width: 500px) {
-        speaker-controller {
+        .controller {
           @apply(--layout-horizontal)
         }
       }
 
       @media (max-width: 499px) {
-        speaker-controller {
+        .controller {
           @apply(--layout-vertical)
         }
       }
@@ -54,7 +56,8 @@
             </paper-material>
           </neon-animatable> 
           
-          <speaker-controller page="speakerController" id="controller" class="fit"></speaker-controller>
+          <speaker-controller class="controller" page="speakerController" id="controller" class="fit"></speaker-controller>
+          <zone-controller class="controller" page="zoneController" id="zoneController" class="fit"></zone-controller>
         </neon-animated-pages>
         <paper-dialog id="dialog">
           <h2>Error</h2>
@@ -112,6 +115,9 @@
       
       _zoneSelected: function(e) {
         var zone = e.detail.zone;
+        this.$.zoneController.zone = zone;
+        this.selected = "zoneController"
+        this.$.nav.showBackArrow();
         console.log(zone);
       },
 
