commiting equalizer code

--- a/software/src/omaha/templates/components/light-controller.html
+++ b/software/src/omaha/templates/components/light-controller.html
@@ -25,7 +25,7 @@
       }
       
       paper-button {
-        background-color: #4285f4;
+        background-color: #3367d6;
         color: #fff;
         margin-top: 10px;
       }
