--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -28,7 +28,7 @@
         padding: 10px;
       }
       paper-button {
-        background-color: #4285f4;
+        background-color: #3367d6;
         color: #fff;
         margin-top: 5px;
         width: 100%;
