--- a/software/src/omaha/templates/components/speaker-tooltip.html
+++ b/software/src/omaha/templates/components/speaker-tooltip.html
@@ -9,7 +9,8 @@
       :host {
       }
       paper-button {
-        background-color: #4285f4;
+       /* background-color: #4285f4; */
+       background-color: #3367d6;
         color: #fff;
         margin-top: 5px;
         width: 100%;
