--- a/software/src/omaha/templates/components/test.html
+++ b/software/src/omaha/templates/components/test.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="./style.css">
 	<script>
 
 
