--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -34,6 +34,7 @@ iron-toolbar {
 }
 
 paper-button {
+  background-color: #3367d6;
   margin: 0.5em 1em 0.5em 0;
   width: 10em;
 }
@@ -63,7 +64,105 @@ paper-tabs paper-tab.iron-selected {
   color: #ffff8d;
 }
 
+paper-card {
+  text-align: center;
+}
+
 .full-container {
   height: 100%;
-  padding: 20px;
+  padding: 0px; /* This was 20, change back if needed */
+}
+
+.ui-state-default,
+.ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default {
+  background: #3367d6;
+  border-radius: 20px;
+  border: 2px solid #d3d3d3;
+  /*
+  margin-bottom: -15px;
+  margin-left: -5px;
+  */
+  margin-bottom: calc(-.012 * 100vh);
+  margin-left: calc(-.005 * 100vw);
+
+  width: calc(.022 * 100vw);
+  height: calc(.022 * 100vw);
+}
+
+.ui-widget-header {
+  background: #3367d6;
+}
+
+.custom {
+  position: relative;
+  top: 0px;
+  width: 4%;
+
+  /* try this first when importing the code */
+
+  display: inline-block; 
+  height: calc(.4 * 100vh);
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+}
+
+.custom > .custom_slider {
+  height: 90%;
+  margin-bottom: calc(.005 * 100vh); /* This was 25 */
+  margin-left: calc(.004 * 100vw);
+  width: 70%;
+  /*width: 50px; /* Change this back */
+}
+
+.custom > input {
+  /*
+  color: #f6931f; 
+  */
+  border: 0;
+  font-weight: bold; 
+  font-size: calc(.05 * 100vw);
+  width: calc(.06 * 100vw);
+  color: #4285f4;
+  text-align: center;
+  margin-left: calc(50% - .011 * 100vw);
+  margin-bottom: calc(.04 * 100vh); /* This as 20 */
+}
+
+.custom.one {
+  /*margin-left: calc(40% - .175 * 100vw);
+*/
+}
+
+#custom_container {
+  position: relative;
+  top: calc(10%);
+  width: calc(.45 * 100vw);
+   width: 100%; 
+  /* height: 100vh; */
+  margin: 0px;
+  
+}
+
+#header {
+  height: 100px;
+  margin: -10px;
+  background: #4285f4;
+}
+
+#header nav.top {
+  color: #a6abab;
+  background: #4285f4;
+  z-index: -1;
+  height: 100%;
+}
+
+#square {
+  width: 80%;
+  left: 10%;
+  height: 50px;
+  background: #4285d5;
+  z-index: 1;
+  position: relative;
+  top: 25px;
 }
