--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -21,19 +21,13 @@
 
       #slider {
         width: 100%;
-        height: 100%;
+        height: 85%;
         margin-bottom: calc(.03 * 100vh);
-      }
-     
-      paper-slider {
-        width: 100%;
-        height: 100%;
-        /*transform: rotate(-90deg);*/
       }
 
       paper-card {
         width: 100%;
-        height: 120%;    /* This was 100%, cahnge back if needed */
+         height: 60%;   /* This was 100%, cahnge back if needed */
       }
 
       .paper-card .card-content {
@@ -57,7 +51,7 @@
       <div class="card-content">
         <div id="slider" class="layout horizontal">
           <div id="custom_container"> 
-            <div class="custom one" id="one"> <input id="text1" readonly/> <div class="custom_slider" value={{"internalEqualizer1"}}></div></div>
+            <div class="custom one"> <input id="text1" readonly/> <div class="custom_slider" value={{"internalEqualizer"}}></div></div>
             <div class="custom two"> <input id="text2" readonly/> <div class="custom_slider" value={{"equalizer2"}}></div></div>
             <div class="custom three"> <input id="text3" readonly/> <div class="custom_slider" value={{"equalizer3"}}></div></div>
             <div class="custom four"> <input id="text4" readonly/> <div class="custom_slider" value={{"equalizer4"}}></div></div>
@@ -69,6 +63,15 @@
             <div class="custom ten"> <input id="text10" readonly/> <div class="custom_slider" value={{"equalizer10"}}></div></div>
             <div class="custom eleven"> <input id="text11" readonly/> <div class="custom_slider" value={{"equalizer11"}}></div></div>
             <div class="custom twelve"> <input id="text12" readonly/> <div class="custom_slider" value={{"equalizer12"}}></div></div>
+            <div class="custom thirteen"> <input id="text13" readonly/> <div class="custom_slider" value={{"equalizer13"}}></div></div>
+            <div class="custom fourteen"> <input id="text14" readonly/> <div class="custom_slider" value={{"equalizer14"}}></div></div>
+            <div class="custom fifteen"> <input id="text15" readonly/> <div class="custom_slider" value={{"equalizer15"}}></div></div>
+            <div class="custom sixteen"> <input id="text16" readonly/> <div class="custom_slider" value={{"equalizer16"}}></div></div>
+            <div class="custom seventeen"> <input id="text17" readonly/> <div class="custom_slider" value={{"equalizer17"}}></div></div>
+            <div class="custom eighteen"> <input id="text18" readonly/> <div class="custom_slider" value={{"equalizer18"}}></div></div>
+            <div class="custom nineteen"> <input id="text19" readonly/> <div class="custom_slider" value={{"equalizer19"}}></div></div>
+            <div class="custom twenty"> <input id="text20" readonly/> <div class="custom_slider" value={{"equalizer20"}}></div></div>
+            <div class="custom twentyone"> <input id="text21" readonly/> <div class="custom_slider" value={{"equalizer21"}></div></div>
           </div>
         </div>
       </div>
@@ -77,17 +80,23 @@
         <paper-button on-click="_setEqualizerClicked">set equalizer</paper-button>
       </div>
     </paper-card>
-    <paper-toast id="toast">Equalizer set to <span>{{equalizer1}}</span></paper-toast>
+    <paper-toast id="toast">Equalizer set to <span>{{iirConstantsString}}</span></paper-toast>
   </template>
   <script>
+  var iirConstants = [];
+  for(loopVar = 0; loopVar < 21; loopVar++) { // watch out! we got a static over here
+    console.log("hi");
+    iirConstants[loopVar] = 0;
+  }
+  console.log(iirConstants);
     Polymer({
       is: 'equalizer-controller',
       
       properties: {
-        internalEqualizer1: Number,
+        internalEqualizer: String,
 
-        equalizer1: {
-          type: Number,
+        equalizer: {
+          type: String,
           notify: true,
           observer: '_setInternalEqualizer'
         },
@@ -97,13 +106,19 @@
         }
       },
 
-      _setInternalEqualizer1: function(equalizer1) {
-        this.internalEqualizer1 = equalizer1;
+      _setInternalEqualizer: function(iirConstantsString) {
+        this.internalEqualizer = iirConstantsString;
+        console.log("_setInternalEqualizer " + iirConstantsString);
       },
       
       _setEqualizerClicked: function() {
-        this.$.equalizer1 = this.internalEqualizer1;
+        
+        this.equalizer = iirConstants.join(" ");  // this gets sent to the backend because Go's Fields(String) function works only with whitespaces
+        this.iirConstantsString = iirConstants.join(", ");  // this is for the toast message
         this.$.toast.show();
+        console.log("_setEqualizerClicked");
+        
+        console.log(iirConstants);
       },
       /*
       decrementVolume: function() {
@@ -138,18 +153,18 @@
       },
 
       ready: function() {
-        this.internalVolume = this.volume;
+        this.internalEqualizer = this.iirConstantsString;
       }
     });
-  </script>
-  <script>
+
+// there was some script endings and shit here, putem back if shit fucks up
 
   var MIN_WIDTH_SUPPORTED = 0;
   var MIN_HEIGHT_SUPPORTED = 0;
   //console.log(navigator);
 
-  if($(window).width() > MIN_WIDTH_SUPPORTED && $(window).height() > MIN_HEIGHT_SUPPORTED) {    // You should instead make this function alawys run but make the element hide on this if
-    $(function() {
+  if($(window).width() > MIN_WIDTH_SUPPORTED || $(window).height() > MIN_HEIGHT_SUPPORTED) {
+    /*$(function() {
       $( ".custom > .custom_slider" ).slider({
         orientation: "vertical",
         range: "min",
@@ -158,29 +173,287 @@
         value: 10,
         slide: function( event, ui) {
           var inputs = document.getElementsByClassName("custom");
+          var handles = document.getElementsByClassName("ui-slider-handle ui-state-default ui-corner-all");
+          console.log($(handles[0]).offsetParent().offsetParent());
+          var split = handles[0].className;
+          console.log($(inputs));
 
-          console.log($(inputs[0]).find(".ui-slider-handle").value);
+          $( "#text1" ).val( $(inputs[0]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text2" ).val( $(inputs[1]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text3" ).val( $(inputs[2]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text4" ).val( $(inputs[3]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text5" ).val( $(inputs[4]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text6" ).val( $(inputs[5]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text7" ).val( $(inputs[6]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text8" ).val( $(inputs[7]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text9" ).val( $(inputs[8]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text10" ).val( $(inputs[9]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text11" ).val( $(inputs[10]).find(".ui-slider-range-min").prop("clientHeight")/10);
+          $( "#text12" ).val( $(inputs[11]).find(".ui-slider-range-min").prop("clientHeight")/10);
 
-          $( "#text1" ).val( $(inputs[0]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text2" ).val( $(inputs[1]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text3" ).val( $(inputs[2]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text4" ).val( $(inputs[3]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text5" ).val( $(inputs[4]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text6" ).val( $(inputs[5]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text7" ).val( $(inputs[6]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text8" ).val( $(inputs[7]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text9" ).val( $(inputs[8]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text10" ).val( $(inputs[9]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text11" ).val( $(inputs[10]).find(".ui-slider-range-min").prop("clientHeight")/20);
-          $( "#text12" ).val( $(inputs[11]).find(".ui-slider-range-min").prop("clientHeight")/20);
+          //console.log(document.getElementById("text3").value);
+          //console.log(ui);
+          //console.log($(this).offsetParent());
+          //console.log($(this).offsetParent().attr('className'));
+          //console.log($('#selectable .ui-selected').attr('id'));
+        }
+      });*/
+
+    $(function() {
+      $( ".custom.one > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text1" ).val( ui.value);
+          iirConstants[0] = ui.value;
+          console.log(iirConstants[0] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.two > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text2" ).val( ui.value);
+          iirConstants[1] = ui.value;
+          console.log(iirConstants[1] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.three > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text3" ).val( ui.value);
+          iirConstants[2] = ui.value;
+          console.log(iirConstants[2] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.four > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text4" ).val( ui.value);
+          iirConstants[3] = ui.value;
+          console.log(iirConstants[3] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.five > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text5" ).val( ui.value);
+          iirConstants[4] = ui.value;
+          console.log(iirConstants[4] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.six > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text6" ).val( ui.value);
+          iirConstants[5] = ui.value;
+          console.log(iirConstants[5] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.seven > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text7" ).val( ui.value);
+          iirConstants[6] = ui.value;
+          console.log(iirConstants[6] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.eight > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text8" ).val( ui.value);
+          iirConstants[7] = ui.value;
+          console.log(iirConstants[7] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.nine > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text9" ).val( ui.value);
+          iirConstants[8] = ui.value;
+          console.log(iirConstants[8] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.ten > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text10" ).val( ui.value);
+          iirConstants[9] = ui.value;
+          console.log(iirConstants[9] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.eleven > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text11" ).val( ui.value);
+          iirConstants[10] = ui.value;
+          console.log(iirConstants[10] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.twelve > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text12" ).val( ui.value);
+          iirConstants[11] = ui.value;
+          console.log(iirConstants[11] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.thirteen > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text13" ).val( ui.value);
+          iirConstants[12] = ui.value;
+          console.log(iirConstants[12] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.fourteen > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text14" ).val( ui.value);
+          iirConstants[13] = ui.value;
+          console.log(iirConstants[13] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.fifteen > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#textfifteen" ).val( ui.value);
+          iirConstants[14] = ui.value;
+          console.log(iirConstants[14] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.sixteen > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text16" ).val( ui.value);
+          iirConstants[15] = ui.value;
+          console.log(iirConstants[15] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.seventeen > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text17" ).val( ui.value);
+          iirConstants[16] = ui.value;
+          console.log(iirConstants[16] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.eighteen > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text18" ).val( ui.value);
+          iirConstants[17] = ui.value;
+          console.log(iirConstants[17] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.nineteen > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text19" ).val( ui.value);
+          iirConstants[18] = ui.value;
+          console.log(iirConstants[18] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.twenty > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text20" ).val( ui.value);
+          iirConstants[19] = ui.value;
+          console.log(iirConstants[19] + " - | - " + ui.value);
+        }
+      });
+      $( ".custom.twentyone > .custom_slider" ).slider({
+        orientation: "vertical",
+        range: "min",
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          $( "#text21" ).val( ui.value);
+          iirConstants[20] = ui.value;
+          console.log(iirConstants[20] + " - | - " + ui.value);
         }
       });
 
-      //$('.ui-slider-handle').draggable();
       $( "#text1" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
-      //$("custon_container").on("tap",function(){
-        //$(this).hide();
-     // });
       $( "#text2" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text3" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text4" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
@@ -192,7 +465,17 @@
       $( "#text10" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text11" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text12" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text13" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text14" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text15" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text16" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text17" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text18" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text19" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text20" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      $( "#text21" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
     });
+
   } else {
       console.log("there is not enough space to display the equalizer");
 
@@ -213,7 +496,7 @@
       }*/
     } else {
       var custom_container = document.getElementById("custom_container");
-      custom_container.style.visibility = "visible";
+      //custom_container.style.visibility = "visible";
     }
   });
 
