made some changes that might fix the database access

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -199,6 +199,8 @@
         }
       });*/
 
+// try this shit out mayne: http://jqueryrain.com/?MnbPPsmf
+
     $(function() {
       $( ".custom.one > .custom_slider" ).slider({
         orientation: "vertical",
