added some comments about changing the css

--- a/software/src/omaha/templates/components/style.css
+++ b/software/src/omaha/templates/components/style.css
@@ -1,3 +1,9 @@
+/*
+		This shit is deprecated, dont use this
+*/
+
+
+
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
