--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -205,6 +205,7 @@
       $( ".custom.one > .custom_slider" ).slider({
         orientation: "vertical",
         range: "min",
+        //step: .5,
         min: -40,
         max: 10,
         value: 0,
