--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -141,6 +141,11 @@ paper-card {
   margin-left: 4%;
 }
 
+#musicVolume {
+  font-size: 24px;
+  margin-top: calc(0.05 * 100vh);
+}
+
 /* this header shit doesnt do anything */
 
 #header {
